social link icon with font awesome

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="shorcut icon" href="./images/favicon.ico">
     <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css" />
     <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.1.0/css/font-awesome.css">
     <title>Curriculum Vitae</title>
 </head>
 
@@ -36,7 +37,7 @@
                 <div class="avatar__block">
                     <img src="./images/user.jpg" alt="">
                     <span>
-                        <i class="uil uil-comment-dots"></i>
+                        <i class="fa fa-comment"></i>
                     </span>
                 </div>
                 <div>
@@ -53,28 +54,28 @@
             <div class="right">
                 <ul class="contact">
                     <li>
-                        <i class="uil uil-phone-volume"></i>
+                        <i class="fa fa-phone"></i>
                         <strong>Phone : </strong> +91 98997 42615
                     </li>
                     <li>
-                        <i class="uil uil-envelope"></i>
+                        <i class="fa fa-envelope"></i>
                         <strong>Email : </strong> dkmrya02@gmail.com
                     </li>
                 </ul>
                 <ul class="socials">
                     <li>
-                        <a href="https://www.facebook.com/dkmrya02">
-                            <i class="uil uil-facebook"></i>
+                        <a href="https://codepen.io/dkmrya02">
+                            <i class="fa fa-codepen"></i>
                         </a>
                     </li>
                     <li>
-                        <a href="https://twitter.com/dkmrya02">
-                            <i class="uil uil-twitter"></i>
+                        <a href="https://github.com/dkmrya02">
+                            <i class="fa fa-twitter"></i>
                         </a>
                     </li>
                     <li>
-                        <a href="https://www.instagram.com/dkmrya02">
-                            <i class="uil uil-dribbble"></i>
+                        <a href="https://www.linkedin.com/in/dkmrya02/">
+                            <i class="fa fa-linkedin"></i>
                         </a>
                     </li>
                 </ul>
@@ -121,7 +122,7 @@
                 <div class="left">
                     <div class="inner__left">
                         <div class="heading">
-                            <i class="uil uil-graduation-cap"></i>
+                            <i class="fa fa-graduation-cap"></i>
                             <h5>Education</h5>
                         </div>
                         <div class="timeline__wrapper">
@@ -144,7 +145,7 @@
                     </div>
                     <div class="inner__right">
                         <div class="heading">
-                            <i class="uil uil-suitcase-alt"></i>
+                            <i class="fa fa-suitcase"></i>
                             <h5>Experience</h5>
                         </div>
                         <div class="timeline__wrapper">
