--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
         <section class="counter__section">
             <div>
                 <div>
-                    <i class="uil uil-cell"></i>
+                    <i class="fa fa-th"></i>
                 </div>
                 <div>
                     <h3><span class="counter" data-count="15">15</span>+</h3>
@@ -218,7 +218,7 @@
 
             <div>
                 <div>
-                    <i class="uil uil-smile"></i>
+                    <i class="fa fa-smile-o"></i>
                 </div>
                 <div>
                     <h3><span class="counter" data-count="4">4</span>+</h3>
@@ -228,7 +228,7 @@
 
             <div>
                 <div>
-                    <i class="uil uil-trophy"></i>
+                    <i class="fa fa-trophy"></i>
                 </div>
                 <div>
                     <h3><span class="counter" data-count="7">7</span>+</h3>
@@ -242,7 +242,7 @@
 
             <div class="wrapper">
                 <div class="slider__wrapper">
-                    <div class="icon__wrap"><i class="uil uil-feedback"></i></div>
+                    <div class="icon__wrap"><i class="fa fa-quote-left"></i></div>
 
                     <div class="slider">
                         <div class="slide">
@@ -324,11 +324,11 @@
 
         <section class="partners">
             <div class="brands__wrapper">
-                <img src="./images/jquery.png" alt="">
-                <img src="./images/jr.png" alt="">
-                <img src="./images/unique.png" alt="">
-                <img src="./images/wp.png" alt="">
-                <img src="./images/am.png" alt="">
+                <img src="./images/css.png" alt="">
+                <img src="./images/html.png" alt="">
+                <img src="./images/bootstrap.png" alt="">
+                <img src="./images/wordpress.png" alt="">
+                <!-- <img src="./images/am.png" alt=""> -->
             </div>
         </section>
 
@@ -387,7 +387,7 @@
     </main>
 
     <footer class="container">
-        <span>© 2020. All rights reserved</span>
+        <span>© 2021. All rights reserved</span>
     </footer>
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="./plugins/headline/headline.js"></script>
