profile pic and reviews added

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <section class="profile" id="profile__ripple">
             <div class="left">
                 <div class="avatar__block">
-                    <img src="./images/user.jpg" alt="">
+                    <img src="./images/profile.jpg" alt="">
                     <span>
                         <i class="fa fa-comment"></i>
                     </span>
@@ -246,16 +246,14 @@
 
                     <div class="slider">
                         <div class="slide">
-                            <p>Where does it come from? Contrary to popular belief, Lorem Ipsum is not simply random
-                                text. It has roots in a piece of classical Latin literature from 45 BC.</p>
+                            <p>A young gun at just 20 years old, Dilip was our IT man who stays behind the scenes but is very actively involved in all the online work in the backend designing our websites, maintaining hosting servers, debugging, trouble shooting etc. We hope we will be able to give him the exposure and on hands work experience which will form a rock solid foundation for his future in IT companies ahead.</p>
                             <div><img src="./images/1.jpg" alt="Rajiv Singh"></div>
                             <h2>- Rajiv Singh</h2>
                             <h6>Founder India Leisure Tours</h6>
                         </div>
 
                         <div class="slide">
-                            <p>Where does it come from? Contrary to popular belief, Lorem Ipsum is not simply random
-                                text. It has roots in a piece of classical Latin literature from 45 BC.</p>
+                            <p>Dilip did a great job of not only redesigning our website how I wanted it to be, but also helped me in setting up new hosting server withous loosing my emails. His proven experience and excellence is the reason why I would recommend Dilip to anyone who is looking to create a customized website.</p>
                             <div><img src="./images/1.jpg" alt="Vikash Kumar"></div>
                             <h2>- Vikash Kumar</h2>
                             <h6>Co-Founder NLP Minerals Pvt. Ltd</h6>
