logo color improved

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                     </li>
                     <li>
                         <a href="https://github.com/dkmrya02">
-                            <i class="fa fa-twitter"></i>
+                            <i class="fa fa-github"></i>
                         </a>
                     </li>
                     <li>
@@ -106,7 +106,7 @@
                     </p>
                     <p>
                         <span>Nationality</span>
-                        <span>India</span>
+                        <span>Indian</span>
                     </p>
                     <p>
                         <span>Interest</span>
