--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                     </li>
                     <li>
                         <i class="fa fa-envelope"></i>
-                        <strong>Email : </strong> dkmrya02@gmail.com
+                        <strong>Email : </strong>dkmrya02@gmail.com
                     </li>
                 </ul>
                 <ul class="socials">
@@ -137,7 +137,7 @@
                                 <p>Senior Secondary Education</p>
                             </div>
                             <div class="item">
-                                <p>2019 - 2021</p>
+                                <p>2019 - 2022</p>
                                 <p class="center">University</p>
                                 <p>Bachelors of Computer Application</p>
                             </div>
@@ -150,7 +150,7 @@
                         </div>
                         <div class="timeline__wrapper">
                             <div class="item">
-                                <p>2020 - 2020</p>
+                                <p>2019 - 2020</p>
                                 <p class="center">Wordpress Developer</p>
                                 <p>India Leisure Tours</p>
                             </div>
@@ -322,10 +322,10 @@
 
         <section class="partners">
             <div class="brands__wrapper">
-                <img src="./images/css.png" alt="">
+                <!-- <img src="./images/css.png" alt="">
                 <img src="./images/html.png" alt="">
                 <img src="./images/bootstrap.png" alt="">
-                <img src="./images/wordpress.png" alt="">
+                <img src="./images/wp.png" alt=""> -->
                 <!-- <img src="./images/am.png" alt=""> -->
             </div>
         </section>
