--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                     <p class="cd-headline loading-bar">
                         <span class="cd-words-wrapper">
                             <b class="is-visible">Wordpress</b>
-                            <b>Python</b>
+                            <b>CSS</b>
                             <b>HTML</b>
                         </span>
                     </p>
