--- a/index.html
+++ b/index.html
@@ -338,7 +338,7 @@
                         <div><i class="uil uil-phone-volume"></i></div>
                         <div>
                             <h4>Free Call To Me:</h4>
-                            <span>+91 98997 42615</span>
+                            <span>+91 9*99**26**</span>
                         </div>
                     </div>
 
