updated and removed some icons and images

--- a/index.html
+++ b/index.html
@@ -4,13 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://unicons.iconscout.com/release/v2.1.3/css/unicons.css">
     <link rel="stylesheet" href="./plugins/headline/headline.css">
     <link rel="stylesheet" href="./plugins/magnify.css">
-    <link rel="shorcut icon" href="./images/favicon.ico">
+    <link rel="shorcut icon" href="./img/favicon.ico">
     <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css" />
     <link rel="stylesheet" href="./css/style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.1.0/css/font-awesome.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <title>Curriculum Vitae</title>
 </head>
 
@@ -18,12 +17,12 @@
     <nav>
         <div class="container inner">
             <div class="logo">
-                <i class="uil uil-cell"></i>
+                <i class="far fa-file-alt"></i>
                 Curriculum Vitae
             </div>
             <div>
                 <button>
-                    <i class="uil uil-print"></i>
+                    <i class="fas fa-print"></i>
                     Print
                 </button>
             </div>
@@ -35,9 +34,9 @@
         <section class="profile" id="profile__ripple">
             <div class="left">
                 <div class="avatar__block">
-                    <img src="./images/profile.jpg" alt="">
+                    <img src="./img/profile.jpg" alt="">
                     <span>
-                        <i class="fa fa-comment"></i>
+                        <i class="far fa-comment-dots"></i>
                     </span>
                 </div>
                 <div>
@@ -54,7 +53,7 @@
             <div class="right">
                 <ul class="contact">
                     <li>
-                        <i class="fa fa-phone"></i>
+                        <i class="fas fa-phone-square-alt"></i>
                         <strong>Phone : </strong> +91 98997 42615
                     </li>
                     <li>
@@ -65,17 +64,17 @@
                 <ul class="socials">
                     <li>
                         <a href="https://codepen.io/dkmrya02">
-                            <i class="fa fa-codepen"></i>
+                            <i class="fab fa-codepen"></i>
                         </a>
                     </li>
                     <li>
                         <a href="https://github.com/dkmrya02">
-                            <i class="fa fa-github"></i>
+                            <i class="fab fa-github"></i>
                         </a>
                     </li>
                     <li>
                         <a href="https://www.linkedin.com/in/dkmrya02/">
-                            <i class="fa fa-linkedin"></i>
+                            <i class="fab fa-linkedin-in"></i>
                         </a>
                     </li>
                 </ul>
@@ -87,7 +86,7 @@
             <div class="content">
                 <div class="left">
                     <h2>I'm Dilip Kumar</h2>
-                    <p>I am a Computer Enthusiast. I love to learn New things. I have designed some websites using HTML, Wordpress</p>
+                    <p>Hi! My name is Dilip, and I am a self taught front end web developer. I learnt everything I know in my free time from YouTube and online courses.</p>
                     <button>Download CV</button>
 
                 </div>
@@ -218,7 +217,7 @@
 
             <div>
                 <div>
-                    <i class="fa fa-smile-o"></i>
+                    <i class="far fa-smile"></i>
                 </div>
                 <div>
                     <h3><span class="counter" data-count="4">4</span>+</h3>
@@ -238,7 +237,7 @@
         </section>
 
         <section class="work">
-            <h1 class="section__heading">My Works & Review</h1>
+            <h1 class="section__heading">My Review</h1>
 
             <div class="wrapper">
                 <div class="slider__wrapper">
@@ -247,86 +246,20 @@
                     <div class="slider">
                         <div class="slide">
                             <p>A young gun at just 20 years old, Dilip was our IT man who stays behind the scenes but is very actively involved in all the online work in the backend designing our websites, maintaining hosting servers, debugging, trouble shooting etc. We hope we will be able to give him the exposure and on hands work experience which will form a rock solid foundation for his future in IT companies ahead.</p>
-                            <div><img src="./images/1.jpg" alt="Rajiv Singh"></div>
+                            <div><img src="./img/1.jpeg" alt="Rajiv Singh"></div>
                             <h2>- Rajiv Singh</h2>
                             <h6>Founder India Leisure Tours</h6>
                         </div>
 
                         <div class="slide">
                             <p>Dilip did a great job of not only redesigning our website how I wanted it to be, but also helped me in setting up new hosting server withous loosing my emails. His proven experience and excellence is the reason why I would recommend Dilip to anyone who is looking to create a customized website.</p>
-                            <div><img src="./images/1.jpg" alt="Vikash Kumar"></div>
+                            <div><img src="./img/1.jpg" alt="Vikash Kumar"></div>
                             <h2>- Vikash Kumar</h2>
                             <h6>Co-Founder NLP Minerals Pvt. Ltd</h6>
                         </div>
                     </div>
                 </div>
-                <div class="portfolio">
-                    <div class="tabs">
-                        <ul>
-                            <li><a class="active" href="#" data-filter="*">All</a></li>
-                            <li><a href="#" data-filter=".design">UI/UX Design</a></li>
-                            <li><a href="#" data-filter=".frontend">Frontend</a></li>
-                            <li><a href="#" data-filter=".backend">Backend</a></li>
-                        </ul>
-                    </div>
-                    <div class="portfolio__wrapper">
-                        <div class="item design">
-                            <a class="magnify" href="./images/1.jpg" title="something">
-                                <img src="./images/1.jpg" alt="">
-                            </a>
-                        </div>
-                        <div class="item frontend">
-                            <a class="magnify" href="./images/2.jpg" title="something">
-                                <img src="./images/2.jpg" alt="">
-                            </a>
-                        </div>
-                        <div class="item backend">
-                            <a class="magnify" href="./images/3.jpg" title="something">
-                                <img src="./images/3.jpg" alt="">
-                            </a>
-                        </div>
-                        <div class="item design">
-                            <a class="magnify" href="./images/4.jpg" title="something">
-                                <img src="./images/4.jpg" alt="">
-                            </a>
-                        </div>
-                        <div class="item design">
-                            <a class="magnify" href="./images/5.jpg" title="something">
-                                <img src="./images/5.jpg" alt="">
-                            </a>
-                        </div>
-                        <div class="item backend">
-                            <a class="magnify" href="./images/3.jpg" title="something">
-                                <img src="./images/3.jpg" alt="">
-                            </a>
-                        </div>
-                        <div class="item frontend">
-                            <a class="magnify" href="./images/3.jpg" title="something">
-                                <img src="./images/3.jpg" alt="">
-                            </a>
-                        </div>
-                        <div class="item backend">
-                            <a class="magnify" href="./images/3.jpg" title="something">
-                                <img src="./images/3.jpg" alt="">
-                            </a>
-                        </div>
-                        <div class="item backend">
-                            <a class="magnify" href="./images/3.jpg" title="something">
-                                <img src="./images/3.jpg" alt="">
-                            </a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </section>
-
-        <section class="partners">
-            <div class="brands__wrapper">
-                <!-- <img src="./images/css.png" alt="">
-                <img src="./images/html.png" alt="">
-                <img src="./images/bootstrap.png" alt="">
-                <img src="./images/wp.png" alt=""> -->
-                <!-- <img src="./images/am.png" alt=""> -->
+                
             </div>
         </section>
 
