--- a/index.html
+++ b/index.html
@@ -4,26 +4,46 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./plugins/headline/headline.css">
-    <link rel="stylesheet" href="./plugins/magnify.css">
-    <link rel="shorcut icon" href="./img/favicon.ico">
-    <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css" />
+    <link rel="stylesheet" href="https://unicons.iconscout.com/release/v2.1.3/css/unicons.css">
+    <link rel="stylesheet" href="./css/headline.css">
+    <link rel="stylesheet" href="./css/magnify.css">
+    <link rel="stylesheet" href="./css/slick.css">
+    <link rel="shorcut icon" href="./images/favicon.ico">
+    <!-- <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css" /> -->
     <link rel="stylesheet" href="./css/style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
-    <title>Curriculum Vitae</title>
+
+    <!-- SEO Tags -->
+    <meta name="title" content="Dilip Kumar Maurya| Front End Web Developer">
+    <meta name="description" content="Hi my name is Dilip Kumar Maurya and I am an Aspiring Front End Web developer based in New Delhi, India. Right now I am pursuing BCA from Guru Gobind Singh Indraprastha University.">
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://www.dilipmaurya.in">
+    <meta property="og:title" content="Dilip Kumar Maurya | Front End Web Developer">
+    <meta property="og:description"
+        content="Hi my name is Dilip Kumar Maurya and I am a Front End Web developer based in New Delhi, India. Right now I am pursuing BCA from Guru Gobind Singh Indraprastha University.">
+    <meta property="og:image" content="./images/og.png">
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://www.dilipmaurya.in">
+    <meta property="twitter:title" content="Dilip Kumar Maurya| Front End Web Developer">
+    <meta property="twitter:description" content="Hi my name is Dilip Kumar Maurya and I am Front End Web developer based in New Delhi, India. Right now I am pursuing BCA from Guru Gobind Singh Indraprastha University.">
+    <meta property="twitter:image" content="./images/og.png">
+    <title>Dilip Kumar Maurya| Front End Web Developer</title>
 </head>
 
 <body>
     <nav>
         <div class="container inner">
             <div class="logo">
-                <i class="far fa-file-alt"></i>
-                Curriculum Vitae
+                <i class="uil uil-cell"></i>
+                DILIP KUMAR MAURYA
             </div>
             <div>
                 <button>
-                    <i class="fas fa-print"></i>
-                    Print
+                    <a href="./print.pdf"><i class="uil uil-print"></i>
+                        Print</a>
                 </button>
             </div>
         </div>
@@ -34,18 +54,18 @@
         <section class="profile" id="profile__ripple">
             <div class="left">
                 <div class="avatar__block">
-                    <img src="./img/profile.jpg" alt="">
+                    <img src="./images/dilip.jpg" alt="">
                     <span>
-                        <i class="far fa-comment-dots"></i>
+                        <i class="uil uil-comment-dots"></i>
                     </span>
                 </div>
                 <div>
-                    <h2>Dilip Kumar</h2>
+                    <h2>Dilip Kumar Maurya</h2>
                     <p class="cd-headline loading-bar">
                         <span class="cd-words-wrapper">
                             <b class="is-visible">Wordpress</b>
-                            <b>CSS</b>
                             <b>HTML</b>
+                            <b>CSS</b>
                         </span>
                     </p>
                 </div>
@@ -53,28 +73,28 @@
             <div class="right">
                 <ul class="contact">
                     <li>
-                        <i class="fas fa-phone-square-alt"></i>
+                        <i class="uil uil-phone-volume"></i>
                         <strong>Phone : </strong> +91 98997 42615
                     </li>
                     <li>
-                        <i class="fa fa-envelope"></i>
-                        <strong>Email : </strong>dkmrya02@gmail.com
+                        <i class="uil uil-envelope"></i>
+                        <strong>Email : </strong> dkmrya02@gmail.com
                     </li>
                 </ul>
                 <ul class="socials">
                     <li>
-                        <a href="https://codepen.io/dkmrya02">
-                            <i class="fab fa-codepen"></i>
+                        <a href="https://www.facebook.com/dkmrya02">
+                            <i class="uil uil-facebook"></i>
                         </a>
                     </li>
                     <li>
                         <a href="https://github.com/dkmrya02">
-                            <i class="fab fa-github"></i>
+                            <i class="uil uil-github"></i>
                         </a>
                     </li>
                     <li>
-                        <a href="https://www.linkedin.com/in/dkmrya02/">
-                            <i class="fab fa-linkedin-in"></i>
+                        <a href="https://www.codepen.io/dkmrya02">
+                            <i class="uil uil-linkedin"></i>
                         </a>
                     </li>
                 </ul>
@@ -85,9 +105,9 @@
             <h1 class="section__heading">About US !</h1>
             <div class="content">
                 <div class="left">
-                    <h2>I'm Dilip Kumar</h2>
-                    <p>Hi! My name is Dilip, and I am a self taught front end web developer. I learnt everything I know in my free time from YouTube and online courses.</p>
-                    <button>Download CV</button>
+                    <h2>I'm Dilip Kumar Maurya</h2>
+                    <p>Hi! My name is Dilip, and I am a Front End Web Developer based in New Delhi, India. Right now I am pursuing BCA from Guru Gobind Singh Indraprastha University. I am actively looking for opportunities that will help me in growing/building my tech stack in field of Web Development.</p>
+                    <button> <a href="./resume.pdf">Download CV</a> </button>
 
                 </div>
                 <div class="right">
@@ -109,7 +129,7 @@
                     </p>
                     <p>
                         <span>Interest</span>
-                        <span>Music</span>
+                        <span>Music, Exploring Tech</span>
                     </p>
                 </div>
             </div>
@@ -121,7 +141,7 @@
                 <div class="left">
                     <div class="inner__left">
                         <div class="heading">
-                            <i class="fa fa-graduation-cap"></i>
+                            <i class="uil uil-graduation-cap"></i>
                             <h5>Education</h5>
                         </div>
                         <div class="timeline__wrapper">
@@ -144,18 +164,18 @@
                     </div>
                     <div class="inner__right">
                         <div class="heading">
-                            <i class="fa fa-suitcase"></i>
+                            <i class="uil uil-suitcase-alt"></i>
                             <h5>Experience</h5>
                         </div>
                         <div class="timeline__wrapper">
                             <div class="item">
-                                <p>2019 - 2020</p>
-                                <p class="center">Wordpress Developer</p>
-                                <p>India Leisure Tours</p>
+                                <p>2019 - 2021</p>
+                                <p class="center">Part Time Wordpress Developer</p>
+                                <p>Bizi Bee Group</p>
                             </div>
                             <div class="item">
-                                <p>2020 - 2020</p>
-                                <p class="center">Wordpress Developer</p>
+                                <p>2020 - 2021</p>
+                                <p class="center">Remote Web Developer</p>
                                 <p>NLP Minerals Pvt. Ltd</p>
                             </div>
                             <div class="item">
@@ -177,15 +197,15 @@
                             </div>
                         </div>
                         <div class="skill-box">
-                            <h4>PHOTOSHOP & ILLUSTRATOR</h4>
+                            <h4>PHOTOSHOP</h4>
                             <div class="progress__wrap">
                                 <span data-percent="65" class="progress__bar">
-                                    <span class="tooltip">78%</span>
+                                    <span class="tooltip">65%</span>
                                 </span>
                             </div>
                         </div>
                         <div class="skill-box">
-                            <h4>WEB DESIGN</h4>
+                            <h4>FIGMA</h4>
                             <div class="progress__wrap">
                                 <span data-percent="30" class="progress__bar">
                                     <span class="tooltip">30%</span>
@@ -193,10 +213,10 @@
                             </div>
                         </div>
                         <div class="skill-box">
-                            <h4>UI/UX DESIGN</h4>
+                            <h4>MS OFFICE</h4>
                             <div class="progress__wrap">
-                                <span data-percent="20" class="progress__bar">
-                                    <span class="tooltip">20%</span>
+                                <span data-percent="82" class="progress__bar">
+                                    <span class="tooltip">78%</span>
                                 </span>
                             </div>
                         </div>
@@ -207,27 +227,27 @@
         <section class="counter__section">
             <div>
                 <div>
-                    <i class="fa fa-th"></i>
+                    <i class="uil uil-cell"></i>
                 </div>
                 <div>
-                    <h3><span class="counter" data-count="15">15</span>+</h3>
+                    <h3><span class="counter" data-count="14">14</span>+</h3>
                     <h5>Completed projects</h5>
                 </div>
             </div>
 
             <div>
                 <div>
-                    <i class="far fa-smile"></i>
+                    <i class="uil uil-smile"></i>
                 </div>
                 <div>
-                    <h3><span class="counter" data-count="4">4</span>+</h3>
+                    <h3><span class="counter" data-count="8">8</span>+</h3>
                     <h5>Happy clients</h5>
                 </div>
             </div>
 
             <div>
                 <div>
-                    <i class="fa fa-trophy"></i>
+                    <i class="uil uil-trophy"></i>
                 </div>
                 <div>
                     <h3><span class="counter" data-count="7">7</span>+</h3>
@@ -237,25 +257,25 @@
         </section>
 
         <section class="work">
-            <h1 class="section__heading">My Review</h1>
+            <h1 class="section__heading">My Works & Review</h1>
 
             <div class="wrapper">
                 <div class="slider__wrapper">
-                    <div class="icon__wrap"><i class="fa fa-quote-left"></i></div>
+                    <div class="icon__wrap"><i class="uil uil-feedback"></i></div>
 
                     <div class="slider">
                         <div class="slide">
-                            <p>A young gun at just 20 years old, Dilip was our IT man who stays behind the scenes but is very actively involved in all the online work in the backend designing our websites, maintaining hosting servers, debugging, trouble shooting etc. We hope we will be able to give him the exposure and on hands work experience which will form a rock solid foundation for his future in IT companies ahead.</p>
-                            <div><img src="./img/1.jpeg" alt="Rajiv Singh"></div>
-                            <h2>- Rajiv Singh</h2>
-                            <h6>Founder India Leisure Tours</h6>
+                            <p>Dilip did a great job of not only redesigning our website how I wanted it to be, but also helped me in setting up new hosting server withous loosing my emails. His proven experience and excellence is the reason why I would recommend Dilip to anyone who is looking to create a customized website.</p>
+                            <div><img src="./images/vikash.jpg" alt=""></div>
+                            <h2>- Vikash Kumar</h2>
+                            <h6>Sales Manager NLP Minerals Pvt Ltd.</h6>
                         </div>
 
                         <div class="slide">
-                            <p>Dilip did a great job of not only redesigning our website how I wanted it to be, but also helped me in setting up new hosting server withous loosing my emails. His proven experience and excellence is the reason why I would recommend Dilip to anyone who is looking to create a customized website.</p>
-                            <div><img src="./img/1.jpg" alt="Vikash Kumar"></div>
-                            <h2>- Vikash Kumar</h2>
-                            <h6>Co-Founder NLP Minerals Pvt. Ltd</h6>
+                            <p>A young gun at just 20 years old, Dilip was our IT man who stays behind the scenes but is very actively involved in all the online work in the backend designing our websites, maintaining hosting servers, debugging, trouble shooting etc. We hope we will be able to give him the exposure and on hands work experience which will form a rock solid foundation for his future in IT companies ahead.</p>
+                            <div><img src="./images/rajiv.jpeg" alt=""></div>
+                            <h2>- Rajiv Singh</h2>
+                            <h6>Founder Bizi Bee Group</h6>
                         </div>
                     </div>
                 </div>
@@ -271,7 +291,7 @@
                         <div><i class="uil uil-phone-volume"></i></div>
                         <div>
                             <h4>Free Call To Me:</h4>
-                            <span>+91 9*99**26**</span>
+                            <span>+91 98997 42615</span>
                         </div>
                     </div>
 
@@ -287,7 +307,7 @@
                         <div><i class="uil uil-map-marker"></i></div>
                         <div>
                             <h4>Find Me:</h4>
-                            <span>E-13, New Delhi-71, India</span>
+                            <span>Dwarka, New Delhi, India</span>
                         </div>
                     </div>
                 </div>
@@ -320,12 +340,8 @@
     <footer class="container">
         <span>© 2021. All rights reserved</span>
     </footer>
-    <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
-    <script src="./plugins/headline/headline.js"></script>
-    <script src="./plugins/ripples.js"></script>
-    <script src="./plugins/isotope.js"></script>
-    <script src="./plugins/magnify.js"></script>
-    <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
+    <script src="./js/min/jquery.min.js"></script>
+    <script type="text/javascript" src="./js/min/slick.min.js"></script>
     <script src="./js/app.js"></script>
 </body>
 
