--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="yandex-verification" content="3bcc7e25fe674b36" />
     <link rel="stylesheet" href="https://unicons.iconscout.com/release/v2.1.3/css/unicons.css">
     <link rel="stylesheet" href="./css/headline.css">
     <link rel="stylesheet" href="./css/magnify.css">
