--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="./css/headline.css">
     <link rel="stylesheet" href="./css/magnify.css">
     <link rel="stylesheet" href="./css/slick.css">
-    <link rel="shorcut icon" href="./images/favicon.ico">
+    <link rel="shorcut icon" href="./images/favicon.png">
     <link rel="stylesheet" href="./css/style.css">
 
     <!-- SEO Tags -->
