linkedin link corrected

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                         </a>
                     </li>
                     <li>
-                        <a href="https://www.codepen.io/dkmrya02">
+                        <a href="https://www.linkedin.com/in/dkmrya02/">
                             <i class="uil uil-linkedin"></i>
                         </a>
                     </li>
