--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
 
     <!-- SEO Tags -->
     <meta name="title" content="Dilip Kumar Maurya | Front End Web Developer">
-    <meta name="description" content="Hi my name is Dilip Kumar Maurya and I am an Aspiring Front End Web developer based in New Delhi, India. Right now I am pursuing BCA from Guru Gobind Singh Indraprastha University.">
+    <meta name="description"
+        content="Hi my name is Dilip Kumar Maurya and I am an Aspiring Front End Web developer based in New Delhi, India. Right now I am pursuing BCA from Guru Gobind Singh Indraprastha University.">
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
@@ -28,7 +29,8 @@
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://www.dilipmaurya.in">
     <meta property="twitter:title" content="Dilip Kumar Maurya | Front End Web Developer">
-    <meta property="twitter:description" content="Hi my name is Dilip Kumar Maurya and I am Front End Web developer based in New Delhi, India. Right now I am pursuing BCA from Guru Gobind Singh Indraprastha University.">
+    <meta property="twitter:description"
+        content="Hi my name is Dilip Kumar Maurya and I am Front End Web developer based in New Delhi, India. Right now I am pursuing BCA from Guru Gobind Singh Indraprastha University.">
     <meta property="twitter:image" content="./images/og.png">
     <title>Dilip Kumar Maurya | Front End Web Developer</title>
 </head>
@@ -54,7 +56,7 @@
         <section class="profile" id="profile__ripple">
             <div class="left">
                 <div class="avatar__block">
-                    <img src="./images/dilip.jpg" alt="">
+                    <img src="./images/logo.svg" alt="">
                     <span>
                         <i class="uil uil-comment-dots"></i>
                     </span>
@@ -63,9 +65,10 @@
                     <h2>Dilip Kumar Maurya</h2>
                     <p class="cd-headline loading-bar">
                         <span class="cd-words-wrapper">
-                            <b class="is-visible">Wordpress</b>
+                            <b class="is-visible">React</b>
                             <b>HTML</b>
                             <b>CSS</b>
+                            <b>Javascript</b>
                         </span>
                     </p>
                 </div>
@@ -74,26 +77,26 @@
                 <ul class="contact">
                     <li>
                         <i class="uil uil-phone-volume"></i>
-                        <strong>Phone : </strong> +91 98997 42615
+                        <strong>Phone : </strong> +91 98XX7 XXX15
                     </li>
                     <li>
                         <i class="uil uil-envelope"></i>
-                        <strong>Email : </strong> dkmrya02@gmail.com
+                        <strong>Email : </strong> curiousdilip@gmail.com
                     </li>
                 </ul>
                 <ul class="socials">
                     <li>
-                        <a href="https://www.facebook.com/dkmrya02">
+                        <a href="https://www.facebook.com/curiousdilip">
                             <i class="uil uil-facebook"></i>
                         </a>
                     </li>
                     <li>
-                        <a href="https://github.com/dkmrya02">
+                        <a href="https://github.com/curiousdilip">
                             <i class="uil uil-github"></i>
                         </a>
                     </li>
                     <li>
-                        <a href="https://www.linkedin.com/in/dkmrya02/">
+                        <a href="https://www.linkedin.com/in/curiousdilip/">
                             <i class="uil uil-linkedin"></i>
                         </a>
                     </li>
@@ -106,8 +109,14 @@
             <div class="content">
                 <div class="left">
                     <h2>I'm Dilip Kumar Maurya</h2>
-                    <p>Hi! My name is Dilip, and I am a Front End Web Developer based in New Delhi, India. Right now I am pursuing BCA from Guru Gobind Singh Indraprastha University. I am actively looking for opportunities that will help me in growing/building my tech stack in field of Web Development.</p>
-                    <button> <a href="./resume.pdf">Download CV</a> </button>
+                    <p>I am a web developer with more than 1 year of experience, I'm very passionate about technology
+                        and computers. I am reliable, can work in a team, and can learn quickly my interests are in
+                        frontend web development. In my free time, I enjoy music, gaming, and reading.
+                    </p>
+                    <button> <a
+                            href="https://drive.google.com/file/d/1wRR0TOt4yD1VavhsBGQ0iyNV9TGoTN9x/view?usp=drive_link"
+                            target="_blank">Download
+                            CV</a> </button>
 
                 </div>
                 <div class="right">
@@ -117,7 +126,7 @@
                     </p>
                     <p>
                         <span>Date of birth</span>
-                        <span>01 February 1999</span>
+                        <span>01 February 2XXX</span>
                     </p>
                     <p>
                         <span>Spoken Langages</span>
@@ -148,17 +157,17 @@
                             <div class="item">
                                 <p>2010-2017</p>
                                 <p class="center">Matriculation</p>
-                                <p>Secondary Education</p>
+                                <p>Mount Carmel School, Dwarka</p>
                             </div>
                             <div class="item">
                                 <p>2017 - 2019</p>
                                 <p class="center">Intermediate</p>
-                                <p>Senior Secondary Education</p>
+                                <p>Mount Carmel School, Dwarka</p>
                             </div>
                             <div class="item">
                                 <p>2019 - 2022</p>
-                                <p class="center">University</p>
-                                <p>Bachelors of Computer Application</p>
+                                <p class="center">Bachelors of Computer Application</p>
+                                <p>Guru Gobind Singh Indraprastha University</p>
                             </div>
                         </div>
                     </div>
@@ -169,19 +178,19 @@
                         </div>
                         <div class="timeline__wrapper">
                             <div class="item">
-                                <p>2019 - 2021</p>
-                                <p class="center">Part Time Wordpress Developer</p>
-                                <p>Bizi Bee Group</p>
+                                <p>2023 - Present</p>
+                                <p class="center">Web Content Executive</p>
+                                <p>World Health Organization</p>
                             </div>
                             <div class="item">
-                                <p>2020 - 2021</p>
-                                <p class="center">Remote Web Developer</p>
-                                <p>NLP Minerals Pvt. Ltd</p>
+                                <p>2022 - 2023</p>
+                                <p class="center">Frontend Web Developer</p>
+                                <p>Taknik Bharti</p>
                             </div>
                             <div class="item">
-                                <p>2020 - 2020</p>
-                                <p class="center">Web Designer - Freelancer</p>
-                                <p>LifeAmuses Blog</p>
+                                <p>2021 - 2022</p>
+                                <p class="center">Freelance Web Developer</p>
+                                <p>Freelancer</p>
                             </div>
                         </div>
                     </div>
@@ -191,32 +200,32 @@
                         <div class="skill-box">
                             <h4>Html & Css3</h4>
                             <div class="progress__wrap">
-                                <span data-percent="55" class="progress__bar">
-                                    <span class="tooltip">55%</span>
+                                <span data-percent="60" class="progress__bar">
+                                    <span class="tooltip">60%</span>
                                 </span>
                             </div>
                         </div>
                         <div class="skill-box">
-                            <h4>PHOTOSHOP</h4>
+                            <h4>Javascript</h4>
                             <div class="progress__wrap">
-                                <span data-percent="65" class="progress__bar">
-                                    <span class="tooltip">65%</span>
+                                <span data-percent="40" class="progress__bar">
+                                    <span class="tooltip">40%</span>
                                 </span>
                             </div>
                         </div>
                         <div class="skill-box">
                             <h4>FIGMA</h4>
                             <div class="progress__wrap">
-                                <span data-percent="30" class="progress__bar">
-                                    <span class="tooltip">30%</span>
+                                <span data-percent="70" class="progress__bar">
+                                    <span class="tooltip">70%</span>
                                 </span>
                             </div>
                         </div>
                         <div class="skill-box">
-                            <h4>MS OFFICE</h4>
+                            <h4>React</h4>
                             <div class="progress__wrap">
-                                <span data-percent="82" class="progress__bar">
-                                    <span class="tooltip">78%</span>
+                                <span data-percent="60" class="progress__bar">
+                                    <span class="tooltip">60%</span>
                                 </span>
                             </div>
                         </div>
@@ -265,21 +274,28 @@
 
                     <div class="slider">
                         <div class="slide">
-                            <p>Dilip did a great job of not only redesigning our website how I wanted it to be, but also helped me in setting up new hosting server withous loosing my emails. His proven experience and excellence is the reason why I would recommend Dilip to anyone who is looking to create a customized website.</p>
+                            <p>Dilip did a great job of not only redesigning our website how I wanted it to be, but also
+                                helped me in setting up new hosting server withous loosing my emails. His proven
+                                experience and excellence is the reason why I would recommend Dilip to anyone who is
+                                looking to create a customized website.</p>
                             <div><img src="./images/vikash.jpg" alt=""></div>
                             <h2>- Vikash Kumar</h2>
                             <h6>Sales Manager NLP Minerals Pvt Ltd.</h6>
                         </div>
 
                         <div class="slide">
-                            <p>A young gun at just 20 years old, Dilip was our IT man who stays behind the scenes but is very actively involved in all the online work in the backend designing our websites, maintaining hosting servers, debugging, trouble shooting etc. We hope we will be able to give him the exposure and on hands work experience which will form a rock solid foundation for his future in IT companies ahead.</p>
+                            <p>A young gun at just 20 years old, Dilip was our IT man who stays behind the scenes but is
+                                very actively involved in all the online work in the backend designing our websites,
+                                maintaining hosting servers, debugging, trouble shooting etc. We hope we will be able to
+                                give him the exposure and on hands work experience which will form a rock solid
+                                foundation for his future in IT companies ahead.</p>
                             <div><img src="./images/rajiv.jpeg" alt=""></div>
                             <h2>- Rajiv Singh</h2>
                             <h6>Founder Bizi Bee Group</h6>
                         </div>
                     </div>
                 </div>
-                
+
             </div>
         </section>
 
@@ -291,7 +307,7 @@
                         <div><i class="uil uil-phone-volume"></i></div>
                         <div>
                             <h4>Free Call To Me:</h4>
-                            <span>+91 98997 42615</span>
+                            <span>+91 98XX7 XXX15</span>
                         </div>
                     </div>
 
@@ -299,7 +315,7 @@
                         <div><i class="uil uil-envelope"></i></div>
                         <div>
                             <h4>Mail Me:</h4>
-                            <span>dkmrya02@gmail.com</span>
+                            <span>curiousdilip@gmail.com</span>
                         </div>
                     </div>
 
